# dmipy-fit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSING.md  README.md  _config.yml  _toc.yml  conftest.py  jax_run.sh  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
dmipy_fit/: __init__.py
dmipy_fit/audit/: __init__.py  biophysical_constants.py  citations.py  methods_section.py
dmipy_fit/core/: __init__.py  acquisition_scheme.py  constants.py  fitted_modeling_framework.py  model_properties.py  modeling_framework.py  signal_model_properties.py  spherical_harmonics_framework.py  spherical_mean_framework.py
dmipy_fit/custom_optimizers/: __init__.py  impulsed.py  intra_voxel_incoherent_motion.py  reference_models.py  single_shell_three_tissue_csd.py
dmipy_fit/data/: saved_acquisition_schemes.py  saved_data.py
dmipy_fit/distributions/: distribute_models.py  distributions.py
dmipy_fit/jax/: __init__.py  attenuation_jax.py  brute_jax.py  convergence.py  csd_jax.py  distributed_models_jax.py  dti_jax.py  exchange_models_jax.py  fractions_jax.py  jax_compat.py  losses_jax.py  multicompartment_jax.py  optimizers_jax.py  signal_models_jax.py  vmap_fit.py
dmipy_fit/optimizers/: __init__.py  brute2fine.py  mix.py  multi_tissue_volume_fraction.py
dmipy_fit/optimizers_fod/: csd_cvxpy.py  csd_plus.py  csd_tournier.py
dmipy_fit/signal_models/: __init__.py  attenuation.py  capped_cylinder_models.py  cylinder_models.py  exchange_models.py  gaussian_models.py  plane_models.py  sphere_models.py  tissue_response_models.py
dmipy_fit/tissue_response/: three_tissue_response.py  white_matter_response.py
dmipy_fit/utils/: construct_observation_matrix.py  sh_analytical.py  spherical_convolution.py  spherical_mean.py  utils.py
dmipy_fit/white_matter/: __init__.py  composition.py  mwf.py  surface.py
docs/: requirements.txt
examples/01_acquisition_schemes/: loading_schemes_from_files_and_dipy.ipynb  loading_schemes_from_files_and_dipy.md  waveform_first_acquisition_scheme.ipynb  waveform_first_acquisition_scheme.md
examples/02_signal_models/: build_multicompartment_model.ipynb  build_multicompartment_model.md
examples/03_fitting_and_optimization/: ivim.ipynb  ivim.md  simulating_and_fitting.ipynb  simulating_and_fitting.md
examples/05_distributed_models/: noddi_watson.ipynb  (+1 more)
tests/: test_dti_jax.py
tools/: precompute_s3_sphere_mc.py
(+173 files in other folders)
